# dynamodb_client_rs

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs  main.rs.bak  module.rs
src/module/: aggregate_result.rs  batch.rs  count_all_item.rs  csv.rs  delete_all.rs  error.rs  fork_join.rs  generate_request.rs  parallel.rs  scan_all_item.rs  series_process.rs
src/module/parallel/: channel.rs  fork_join.rs  loop.rs  map_reduce.rs  parallel_loop.rs  performance.rs  pipeline.rs  worker.rs
