[package]
name = "dynamodb-client-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
maplit = "1.0"
thiserror = "1.0.50"
rayon = "1.8.0"
futures = "0.3.29"
aws-sdk-dynamodb = "0.38.0"
aws-config = "0.101.0"
aws-types = "0.101.0"
aws-smithy-types = "0.101.0"
aws-smithy-runtime-api = { version = "0.101.0", features = ["client"] }
csv = "1.3.0"
clippy = "0.0.302"
